--- a/sample-app/templates/user_added.html
+++ b/sample-app/templates/user_added.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h1>User Added Successfully</h1>
+<p>Name: {{ user.name }}</p>
+<p>Email: {{ user.email }}</p>
 </body>
 </html>
