--- a/sample-app/templates/welcome.html
+++ b/sample-app/templates/welcome.html
@@ -14,19 +14,19 @@
         </header>
 
         <main class="card-grid">
-            <a href="https://github.com/jones-peter/jsweb/" target="_blank" class="card">
+            <a href="https://github.com/jones-peter/jsweb/" class="card">
                 <div class="icon">📖</div>
                 <h3>Documentation</h3>
                 <p>Dive into the official JsWeb documentation to learn about routing, templates, and all the core features.</p>
             </a>
 
-            <a href="https://github.com/jones-peter/jsweb/" target="_blank" class="card">
+            <a href="https://github.com/jones-peter/jsweb/" class="card">
                 <div class="icon">🚀</div>
                 <h3>Quickstart Guide</h3>
                 <p>Follow our step-by-step guide to build your first application and understand the project structure.</p>
             </a>
 
-            <a href="https://github.com/Jones-peter/jsweb/tree/main/sample-app" target="_blank" class="card">
+            <a href="https://github.com/Jones-peter/jsweb/tree/main/sample-app" class="card">
                 <div class="icon">🧩</div>
                 <h3>Examples</h3>
                 <p>Explore a collection of example projects, from simple blogs to REST APIs, to see JsWeb in action.</p>
@@ -40,7 +40,7 @@
         </main>
 
         <footer class="footer">
-            <p>JsWeb {{ library-version }} | Created by <a href="https://github.com/Jones-peter" target="_blank">Jones Peter</a></p>
+            <p>JsWeb {{ library_version }} | Created by <a href="https://github.com/Jones-peter" target="_blank">Jones Peter</a></p>
         </footer>
     </div>
 </body>
