Update : Version Update and Prepared For Release -> v1.2.0

--- a/jsweb/templates/profile.html
+++ b/jsweb/templates/profile.html
@@ -54,7 +54,7 @@
     </div>
 
     <footer class="footer">
-        <p>JsWeb {{ library_version }} | Created with ❤️ by <a href="https://github.com/Jones-peter" target="_blank">Jones Peter</a></p>
+        <p>JsWeb {{ library_version }} | Created with ❤️ by <a href="https://github.com/Jsweb-Tech" target="_blank">Jsweb Tech</a></p>
     </footer>
 </body>
 </html>
