--- a/jsweb/templates/register.html
+++ b/jsweb/templates/register.html
@@ -79,7 +79,7 @@
     </div>
 
     <footer class="footer">
-        <p>JsWeb {{ library_version }} | Created with ❤️ by <a href="https://github.com/Jones-peter" target="_blank">Jones Peter</a></p>
+        <p>JsWeb {{ library_version }} | Created with ❤️ by <a href="https://github.com/Jsweb-Tech" target="_blank">Jsweb Tech</a></p>
     </footer>
 </body>
 </html>
